--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "watch:css": "npx tailwindcss build src/public/css/styles.css -o src/public/css/main.css --watch"
   },
@@ -13,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
